# Perpetuals_Arbitrage

./: .env.example  .gitignore  PLAN.md  README.md  Untitled.ipynb  findings.md  plot_spread.py  pyproject.toml
.claude/skills/financial-researcher/: .skillfish.json  SKILL.md
.claude/skills/financial-researcher/.claude-plugin/: plugin.json
.claude/skills/financial-researcher/experts/: _template.md  ben_graham.md  cathie_wood.md  george_soros.md  jim_simons.md  michael_burry.md  peter_lynch.md  ray_dalio.md  robert_shiller.md  warren_buffett.md
.claude/skills/financial-researcher/processing/: DESIGN.md  __init__.py  behavioral_metrics.py  data_extractor.py  financial_metrics.py  metrics_calculator.py  orchestrator.py  quant_metrics.py  test_pipeline.py
.claude/skills/financial-researcher/references/: DRIVER_Best_Practices.md
.claude/skills/financial-researcher/reports/: WMT_2026-01-23.json  WMT_2026-01-23.md
.claude/skills/financial-researcher/templates/: expert_output_schema.json  (+2 more)
data/processed/: backtest_results.parquet  coverage_report.parquet  funding_rates_8h.parquet  funding_rates_aligned.parquet
notebooks/: 00_data_collection.ipynb  01_exploratory_analysis.ipynb  02_spread_analysis.ipynb  03_cost_modeling.ipynb  04_basis_risk.ipynb  05_backtest.ipynb  06_risk_analysis.ipynb  07_results_synthesis.ipynb
src/: config.py
src/collectors/: ccxt_collector.py  drift_collector.py  dydx_collector.py  hyperliquid_collector.py
src/models/: backtester.py  basis_risk.py  cost_model.py  risk_metrics.py
src/processing/: aligner.py  cleaner.py  normalizer.py
